A bit of data cleaning

--- a/index.ipynb
+++ b/index.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import re "
+    "import re \n",
+    "from fractions import Fraction"
    ]
   },
   {
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +366,7 @@
        "3  product_manufacturer_name                4414"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +475,7 @@
        "7  product_manufacturer_name                  425"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,11 +515,500 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Removing special characters from the product name"
+    "def clean_text(text):\n",
+    "    # Replace hyphens and remove brackets\n",
+    "    text = text.replace('-', ' ')\n",
+    "    text = text.replace('_', ' ')\n",
+    "    text = text.replace('(', '').replace(')', ' ')\n",
+    "    text = text.replace('[', '').replace(']', ' ')\n",
+    "    return text\n",
+    "\n",
+    "df['product_name'] = df['product_name'].apply(clean_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extracting the numeric and unit if missing from the product name\n",
+    "\n",
+    "def extract_and_fill(row):\n",
+    "    pattern = r'(\\d+)\\s*(kg|g|l|ml|Litre|Kilogram|Kg|G|kg|KG|ML|Ml|Kgs)'\n",
+    "    match = re.search(pattern, row['product_name'], re.IGNORECASE)\n",
+    "    if match:\n",
+    "        numeric, unit = match.groups()\n",
+    "        if pd.isnull(row['product_type_numeric']):\n",
+    "            row['product_type_numeric'] = int(numeric)\n",
+    "        if pd.isnull(row['product_type_text']):\n",
+    "            row['product_type_text'] = unit.lower()  # Convert to lowercase for consistency\n",
+    "    return row\n",
+    "\n",
+    "\n",
+    "# Apply the function to the dataframe\n",
+    "df = df.apply(extract_and_fill, axis=1)\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to remove numeric and unit from product_name\n",
+    "def remove_numeric_and_unit(row):\n",
+    "    pattern = r'(\\d+)\\s*(kg|g|l|ml|Litre|Kilogram|Kg|G|kg|KG|ML|Ml|Kgs)'\n",
+    "    row['product_name'] = re.sub(pattern, '', row['product_name'], flags=re.IGNORECASE).strip()\n",
+    "    return row\n",
+    "\n",
+    "# Apply the function to remove numeric values and units from product_name\n",
+    "df = df.apply(remove_numeric_and_unit, axis=1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>column_name</th>\n",
+       "      <th>missing_values_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>id</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>product_name</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>product_category_id</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>product_category_name</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>product_type_numeric</td>\n",
+       "      <td>2930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>product_type_text</td>\n",
+       "      <td>2256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>product_manufacturer_id</td>\n",
+       "      <td>399</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>product_manufacturer_name</td>\n",
+       "      <td>425</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 column_name missing_values_count\n",
+       "0                         id                    0\n",
+       "1               product_name                    0\n",
+       "2        product_category_id                    0\n",
+       "3      product_category_name                    0\n",
+       "4       product_type_numeric                 2930\n",
+       "5          product_type_text                 2256\n",
+       "6    product_manufacturer_id                  399\n",
+       "7  product_manufacturer_name                  425"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_values = pd.DataFrame(columns=['column_name', 'missing_values_count'])\n",
+    "\n",
+    "for column in df.columns:\n",
+    "    missing_values = missing_values._append({'column_name': column, 'missing_values_count': df[column].isnull().sum()}, ignore_index=True)\n",
+    "    \n",
+    "missing_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cleaning up the product_type_text column\n",
+    "\n",
+    "df['product_type_text'] = df['product_type_text'].str.lower()\n",
+    "\n",
+    "df['product_type_text'] = df['product_type_text'].str.strip()\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extracting numericals and fractions from product type text\n",
+    "\n",
+    "def extract_numerical(row):\n",
+    "    pattern = r'(\\d+/\\d+|\\d+)'\n",
+    "    match = re.search(pattern, str(row['product_type_text']), re.IGNORECASE)\n",
+    "    if match:\n",
+    "        numeric = match.group()\n",
+    "        row['product_type_numeric'] = float(Fraction(numeric))\n",
+    "    return row\n",
+    "\n",
+    "# Apply the function to the dataframe\n",
+    "\n",
+    "df = df.apply(extract_numerical, axis=1)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>column_name</th>\n",
+       "      <th>missing_values_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>id</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>product_name</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>product_category_id</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>product_category_name</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>product_type_numeric</td>\n",
+       "      <td>2355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>product_type_text</td>\n",
+       "      <td>2256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>product_manufacturer_id</td>\n",
+       "      <td>399</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>product_manufacturer_name</td>\n",
+       "      <td>425</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 column_name missing_values_count\n",
+       "0                         id                    0\n",
+       "1               product_name                    0\n",
+       "2        product_category_id                    0\n",
+       "3      product_category_name                    0\n",
+       "4       product_type_numeric                 2355\n",
+       "5          product_type_text                 2256\n",
+       "6    product_manufacturer_id                  399\n",
+       "7  product_manufacturer_name                  425"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_values = pd.DataFrame(columns=['column_name', 'missing_values_count'])\n",
+    "\n",
+    "for column in df.columns:\n",
+    "    missing_values = missing_values._append({'column_name': column, 'missing_values_count': df[column].isnull().sum()}, ignore_index=True)\n",
+    "    \n",
+    "missing_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def extract_unit(row):\n",
+    "    pattern = r'(kg|g|l|ml|Litre|Kilogram|Kg|G|kg|KG|ML|Ml|Kgs|gorogoro|sack|bag)'\n",
+    "    match = re.search(pattern, str(row['product_type_text']), re.IGNORECASE)\n",
+    "    if match:\n",
+    "        unit = match.group()\n",
+    "        row['product_type_text'] = unit\n",
+    "    return row\n",
+    "\n",
+    "# Apply the function to the dataframe\n",
+    "\n",
+    "df = df.apply(extract_unit, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# replace dictionary for product_type_text column\n",
+    "\n",
+    "replace_dict = {\n",
+    "    'kg': 'kg',\n",
+    "    'g': 'g',\n",
+    "    'l': 'l',\n",
+    "    'ml': 'ml',\n",
+    "    'litre': 'l',\n",
+    "    'kilogram':'kg',\n",
+    "    'kgs': 'kg',\n",
+    "    'ltr': 'l',\n",
+    "    'gms': 'g',\n",
+    "    'mls': 'ml',\n",
+    "    'lt': 'l',\n",
+    "    'ltrs': 'l',\n",
+    "    'grms': 'g',\n",
+    "    'kg.': 'kg',\n",
+    "    'kgs.': 'kg',\n",
+    "    'gms': 'g',\n",
+    "    'gm': 'g',\n",
+    "    'grms': 'g',\n",
+    "    'kg bags': 'kg',\n",
+    "    'ml.': 'ml',\n",
+    "    'kilos': 'kg',\n",
+    "    'grams': 'g',\n",
+    "    'litres': 'l',\n",
+    "    'lr': 'l',\n",
+    "    'kilo': 'kg',\n",
+    "    'lts': 'l',\n",
+    "    'kgd': 'kg',\n",
+    "    'okg': 'kg',\n",
+    "    'kilograms': 'kg',\n",
+    "    'gr': 'g',\n",
+    "    'korokoro': 'gorogoro',\n",
+    "    'ks': 'kg',\n",
+    "    'kf': 'kg',\n",
+    "    'feeds':'feeds',\n",
+    "    'unit': 'unit',\n",
+    "    'units': 'unit',\n",
+    "    'kh': 'kg',\n",
+    "\n",
+    "}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Applying the dictionary if value isn't found its replaced by other\n",
+    "\n",
+    "def replace_with_dic(value, replace_dict):\n",
+    "    return replace_dict.get(value, 'other')\n",
+    "\n",
+    "\n",
+    "df['product_type_text'] = df['product_type_text'].apply(replace_with_dic, args=(replace_dict,))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>column_name</th>\n",
+       "      <th>missing_values_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>id</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>product_name</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>product_category_id</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>product_category_name</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>product_type_numeric</td>\n",
+       "      <td>2355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>product_type_text</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>product_manufacturer_id</td>\n",
+       "      <td>399</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>product_manufacturer_name</td>\n",
+       "      <td>425</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 column_name missing_values_count\n",
+       "0                         id                    0\n",
+       "1               product_name                    0\n",
+       "2        product_category_id                    0\n",
+       "3      product_category_name                    0\n",
+       "4       product_type_numeric                 2355\n",
+       "5          product_type_text                    0\n",
+       "6    product_manufacturer_id                  399\n",
+       "7  product_manufacturer_name                  425"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_values = pd.DataFrame(columns=['column_name', 'missing_values_count'])\n",
+    "\n",
+    "for column in df.columns:\n",
+    "    missing_values = missing_values._append({'column_name': column, 'missing_values_count': df[column].isnull().sum()}, ignore_index=True)\n",
+    "    \n",
+    "missing_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the value counts of the product_type_text column\n",
+    "\n",
+    "product_type_text = df['product_type_text'].value_counts()"
    ]
   }
  ],
