small changes on cleaning code

--- a/index.ipynb
+++ b/index.ipynb
@@ -695,6 +695,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "product_type_text = df['product_type_text'].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Extracting numericals and fractions from product type text\n",
     "\n",
     "def extract_numerical(row):\n",
@@ -714,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +808,7 @@
        "7  product_manufacturer_name                  425"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,12 +824,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "# Function to extract units\n",
     "def extract_unit(row):\n",
-    "    pattern = r'(kg|g|l|ml|Litre|Kilogram|Kg|G|kg|KG|ML|Ml|Kgs|gorogoro|sack|bag)'\n",
+    "    pattern = r'(kilogram|gorogoro|litre|sack|kg|gms|ml|l|g|bag)'\n",
     "    match = re.search(pattern, str(row['product_type_text']), re.IGNORECASE)\n",
     "    if match:\n",
     "        unit = match.group()\n",
@@ -834,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,6 +890,11 @@
     "    'unit': 'unit',\n",
     "    'units': 'unit',\n",
     "    'kh': 'kg',\n",
+    "    'gorogoro': 'gorogoro',\n",
+    "    'sack': 'sack',\n",
+    "    'bag': 'bag',\n",
+    "    'bags': 'bag',\n",
+    "    'sacks': 'sack',\n",
     "\n",
     "}\n",
     "\n"
@@ -885,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +1003,7 @@
        "7  product_manufacturer_name                  425"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
