preprocessing and modelling

--- a/index.ipynb
+++ b/index.ipynb
@@ -7,8 +7,20 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
     "import re \n",
-    "from fractions import Fraction"
+    "from fractions import Fraction\n",
+    "from rapidfuzz import process, fuzz \n",
+    "\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "from sklearn.cluster import KMeans, DBSCAN\n",
+    "from sklearn.metrics import silhouette_score\n",
+    "\n",
+    "import warnings\n",
+    "\n",
+    "warnings.simplefilter(action=\"ignore\", category=UserWarning)"
    ]
   },
   {
@@ -373,19 +385,15 @@
    ],
    "source": [
     "# Checking count of unique values in the categorical column\n",
-    "\n",
     "categorical_columns = df.select_dtypes(include=['object']).columns\n",
     "\n",
-    "# create a data frame to store the count of unique values in the categorical columns\n",
-    "\n",
+    "# Create a data frame to store the count of unique values in the categorical columns\n",
     "unique_values = pd.DataFrame(columns=['column_name', 'unique_values_count'])\n",
     "\n",
     "for column in categorical_columns:\n",
     "    unique_values = unique_values._append({'column_name': column, 'unique_values_count': df[column].nunique()}, ignore_index=True)\n",
     "\n",
-    "unique_values\n",
-    "\n",
-    "\n"
+    "unique_values"
    ]
   },
   {
@@ -482,7 +490,6 @@
    ],
    "source": [
     "# Checking for missing values\n",
-    "\n",
     "missing_values = pd.DataFrame(columns=['column_name', 'missing_values_count'])\n",
     "\n",
     "for column in df.columns:\n",
@@ -505,11 +512,8 @@
    "outputs": [],
    "source": [
     "# Putting categorical text into Camel Case for uniformity\n",
-    "\n",
     "df['product_name'] = df['product_name'].str.title()\n",
-    "\n",
     "df['product_manufacturer_name'] = df['product_manufacturer_name'].str.title()\n",
-    "\n",
     "df['product_category_name'] = df['product_category_name'].str.title()"
    ]
   },
@@ -520,6 +524,7 @@
    "outputs": [],
    "source": [
     "def clean_text(text):\n",
+    "    \n",
     "    # Replace hyphens and remove brackets\n",
     "    text = text.replace('-', ' ')\n",
     "    text = text.replace('_', ' ')\n",
@@ -537,7 +542,6 @@
    "outputs": [],
    "source": [
     "# Extracting the numeric and unit if missing from the product name\n",
-    "\n",
     "def extract_and_fill(row):\n",
     "    pattern = r'(\\d+)\\s*(kg|g|l|ml|Litre|Kilogram|Kg|G|kg|KG|ML|Ml|Kgs)'\n",
     "    match = re.search(pattern, row['product_name'], re.IGNORECASE)\n",
@@ -551,8 +555,7 @@
     "\n",
     "\n",
     "# Apply the function to the dataframe\n",
-    "df = df.apply(extract_and_fill, axis=1)\n",
-    " "
+    "df = df.apply(extract_and_fill, axis=1)"
    ]
   },
   {
@@ -568,8 +571,7 @@
     "    return row\n",
     "\n",
     "# Apply the function to remove numeric values and units from product_name\n",
-    "df = df.apply(remove_numeric_and_unit, axis=1)\n",
-    "\n"
+    "df = df.apply(remove_numeric_and_unit, axis=1)"
    ]
   },
   {
@@ -680,13 +682,8 @@
    "outputs": [],
    "source": [
     "# Cleaning up the product_type_text column\n",
-    "\n",
     "df['product_type_text'] = df['product_type_text'].str.lower()\n",
-    "\n",
-    "df['product_type_text'] = df['product_type_text'].str.strip()\n",
-    "\n",
-    "\n",
-    "    "
+    "df['product_type_text'] = df['product_type_text'].str.strip()"
    ]
   },
   {
@@ -696,7 +693,6 @@
    "outputs": [],
    "source": [
     "# Extracting numericals and fractions from product type text\n",
-    "\n",
     "def extract_numerical(row):\n",
     "    pattern = r'(\\d+/\\d+|\\d+)'\n",
     "    match = re.search(pattern, str(row['product_type_text']), re.IGNORECASE)\n",
@@ -706,10 +702,7 @@
     "    return row\n",
     "\n",
     "# Apply the function to the dataframe\n",
-    "\n",
-    "df = df.apply(extract_numerical, axis=1)\n",
-    "\n",
-    "\n"
+    "df = df.apply(extract_numerical, axis=1)"
    ]
   },
   {
@@ -828,7 +821,6 @@
     "    return row\n",
     "\n",
     "# Apply the function to the dataframe\n",
-    "\n",
     "df = df.apply(extract_unit, axis=1)"
    ]
   },
@@ -839,7 +831,6 @@
    "outputs": [],
    "source": [
     "# replace dictionary for product_type_text column\n",
-    "\n",
     "replace_dict = {\n",
     "    'kg': 'kg',\n",
     "    'g': 'g',\n",
@@ -879,8 +870,7 @@
     "    'units': 'unit',\n",
     "    'kh': 'kg',\n",
     "\n",
-    "}\n",
-    "\n"
+    "}"
    ]
   },
   {
@@ -890,13 +880,10 @@
    "outputs": [],
    "source": [
     "# Applying the dictionary if value isn't found its replaced by other\n",
-    "\n",
     "def replace_with_dic(value, replace_dict):\n",
     "    return replace_dict.get(value, 'other')\n",
     "\n",
-    "\n",
-    "df['product_type_text'] = df['product_type_text'].apply(replace_with_dic, args=(replace_dict,))\n",
-    "    "
+    "df['product_type_text'] = df['product_type_text'].apply(replace_with_dic, args=(replace_dict,))"
    ]
   },
   {
@@ -1004,17 +991,230 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "product_type_text\n",
+       "kg          37840\n",
+       "g            5036\n",
+       "other        2773\n",
+       "ml           2586\n",
+       "l            1696\n",
+       "unit           45\n",
+       "feeds          17\n",
+       "gorogoro        7\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check the value counts of the product_type_text column\n",
+    "df['product_type_text'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                           0\n",
+       "product_name                 0\n",
+       "product_category_id          0\n",
+       "product_category_name        0\n",
+       "product_type_numeric         0\n",
+       "product_type_text            0\n",
+       "product_manufacturer_id      0\n",
+       "product_manufacturer_name    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Drop rows with missing values in critical columns\n",
+    "df_clean = df.dropna(subset=['product_category_id', 'product_type_numeric', 'product_manufacturer_id'])\n",
     "\n",
-    "product_type_text = df['product_type_text'].value_counts()"
+    "# Drop remaining rows with missing values\n",
+    "df_clean = df.dropna()\n",
+    "\n",
+    "# Check for missing values\n",
+    "df_clean.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to standardize text columns\n",
+    "def standardize_text_columns(df, columns, threshold=85):\n",
+    "    df = df.copy()  # Avoid modifying the original DataFrame\n",
+    "    \n",
+    "    for col in columns:\n",
+    "\n",
+    "        # Convert text to lowercase and strip spaces\n",
+    "        df.loc[:, col] = df[col].astype(str).str.lower().str.strip()\n",
+    "\n",
+    "        # Create a mapping dictionary\n",
+    "        unique_values = df[col].dropna().unique()  \n",
+    "        standardized_mapping = {}\n",
+    "\n",
+    "        for value in unique_values:\n",
+    "            if standardized_mapping:  # Ensure mapping is not empty\n",
+    "                match = process.extractOne(value, standardized_mapping.keys(), score_cutoff=threshold)\n",
+    "                \n",
+    "                if match is not None:  # Ensure a valid match was found\n",
+    "                    best_match, score, _ = match  # Unpack all three values\n",
+    "                    standardized_mapping[value] = standardized_mapping[best_match]\n",
+    "                else:\n",
+    "                    standardized_mapping[value] = value\n",
+    "            else:\n",
+    "                standardized_mapping[value] = value  # First item in mapping\n",
+    "\n",
+    "        # Apply mapping to the column\n",
+    "        df.loc[:, col] = df[col].map(standardized_mapping)\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "# Apply the function to standardize selected columns\n",
+    "columns_to_standardize = [\"product_name\", \"product_manufacturer_name\"]\n",
+    "df_clean = standardize_text_columns(df_clean, columns_to_standardize)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Encode categorical variables\n",
+    "# for col in ['product_category_name', 'product_type_text', 'product_manufacturer_name']:\n",
+    "#     label_encoder = LabelEncoder()\n",
+    "#     df_clean[col] = label_encoder.fit_transform(df_clean[col].astype(str))\n",
+    "\n",
+    "# Perform one-hot encoding on categorical variables\n",
+    "df_clean = pd.get_dummies(df_clean, columns=['product_category_name', 'product_type_text', 'product_manufacturer_name'], drop_first=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select relevant features for clustering\n",
+    "features = df_clean.drop(columns=['id', 'product_name'])\n",
+    "X = df_clean[features.columns]\n",
+    "\n",
+    "# Standardize the features\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modelling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. KNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute the Within-Cluster Sum of Squares (WCSS) and Silhouette Scores for different values of k\n",
+    "wcss = []\n",
+    "silhouette_scores = []\n",
+    "k_range = range(2, 11)\n",
+    "\n",
+    "for k in k_range:\n",
+    "    kmeans = KMeans(n_clusters=k, random_state=42, n_init=10)\n",
+    "    labels = kmeans.fit_predict(X_scaled)\n",
+    "    wcss.append(kmeans.inertia_)\n",
+    "    silhouette_scores.append(silhouette_score(X_scaled, labels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create subplots with 1 row and 2 columns\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(15, 5))\n",
+    "\n",
+    "# Plot Elbow Method on the first subplot\n",
+    "axes[0].plot(k_range, wcss, marker='o', linestyle='-', label=\"WCSS (Elbow Method)\")\n",
+    "axes[0].set_xlabel('Number of Clusters (k)')\n",
+    "axes[0].set_ylabel('WCSS')\n",
+    "axes[0].set_title('Elbow Method for Optimal k')\n",
+    "axes[0].legend()\n",
+    "\n",
+    "# Plot Silhouette Scores on the second subplot\n",
+    "axes[1].plot(k_range, silhouette_scores, marker='s', linestyle='-', color='r', label=\"Silhouette Score\")\n",
+    "axes[1].set_xlabel('Number of Clusters (k)')\n",
+    "axes[1].set_ylabel('Silhouette Score')\n",
+    "axes[1].set_title('Silhouette Score for Different k Values')\n",
+    "axes[1].legend()\n",
+    "\n",
+    "# Display the plots\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. DBSCAN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate the model\n",
+    "dbscan = DBSCAN(eps=0.05, min_samples=2) \n",
+    "\n",
+    "# Make predictions\n",
+    "df_clean['cluster'] = dbscan.fit_predict(X_scaled)\n",
+    "df_clean.head()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "learn-env",
    "language": "python",
    "name": "python3"
   },
@@ -1028,7 +1228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
